--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <form method="post">
         <label>
             Name
             <input type="text">
@@ -59,6 +59,14 @@
         <label>
             Description
             <textarea></textarea>
+        </label>
+        <br>
+        <br>
+        <label>
+            <input type="submit" value="submit">
+        </label>
+        <label>
+            <input type="reset" value="clear">
         </label>
     </form>
 </body>
